--- a/Himeno_Flex/Platforms/Android/AndroidManifest.xml
+++ b/Himeno_Flex/Platforms/Android/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 
-	<summary>ファイル保存用(権限)</summary>
+  <!-- ファイル保存用(権限) -->
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
