--- a/Himeno_Flex/Himeno_Flex.csproj
+++ b/Himeno_Flex/Himeno_Flex.csproj
@@ -31,6 +31,7 @@
 		<Authors>$(AssemblyName), Lemon Electric Computer</Authors>
 		<Copyright>LGPL v2.1</Copyright>
 		<Description>Himeno Bench Mark for GUI.</Description>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -49,6 +50,13 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
