--- a/Himeno_Flex/Himeno_Flex.csproj
+++ b/Himeno_Flex/Himeno_Flex.csproj
@@ -31,15 +31,17 @@
 		<Authors>$(AssemblyName), Lemon Electric Computer</Authors>
 		<Copyright>LGPL v2.1</Copyright>
 		<Description>Himeno Bench Mark for GUI.</Description>
+		<PackageIcon>Icon.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<NeutralLanguage>ja-JP</NeutralLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#9080F0" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#9080F0" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#9080F0" BaseSize="256,256" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -53,6 +55,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Include="..\Icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
