dllをコピーする場所を追加

--- a/HimenoBMTxps/HimenoBMTxps.vcxproj
+++ b/HimenoBMTxps/HimenoBMTxps.vcxproj
@@ -130,12 +130,18 @@
       <AdditionalDependencies />
     </Link>
     <PostBuildEvent>
-      <Command>copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\"
+      <Command>
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\"
 copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\AppX\"
+
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\osx-$(PlatformTarget)\"
 copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\maccatalyst-$(PlatformTarget)\"
+
 copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-android\"
+
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\ios\"
 copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\iossimulator-$(PlatformTarget)\"
-</Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
