--- a/HimenoBMTxps/HimenoBMTxps.vcxproj
+++ b/HimenoBMTxps/HimenoBMTxps.vcxproj
@@ -103,6 +103,22 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <ItemDefinitionGroup>
+    <PostBuildEvent>
+      <Command>
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\"
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\AppX\"
+
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\osx-$(PlatformTarget)\"
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\maccatalyst-$(PlatformTarget)\"
+
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-android\"
+
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\ios\"
+copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\iossimulator-$(PlatformTarget)\"
+      </Command>
+    </PostBuildEvent>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -129,20 +145,6 @@
     <Link>
       <AdditionalDependencies />
     </Link>
-    <PostBuildEvent>
-      <Command>
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\"
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-windows10.0.19041.0\win10-$(PlatformTarget)\AppX\"
-
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\osx-$(PlatformTarget)\"
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-maccatalyst\maccatalyst-$(PlatformTarget)\"
-
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex\bin\$(Configuration)\$(TargetFramework)-android\"
-
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\ios\"
-copy "..\$(PlatformTarget)\$(Configuration)\*" "..\Himeno_Flex/bin\$(Configuration)\$(TargetFramework)-ios\iossimulator-$(PlatformTarget)\"
-      </Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
