--- a/Himeno_Flex/Himeno_Flex.csproj
+++ b/Himeno_Flex/Himeno_Flex.csproj
@@ -70,4 +70,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+  <ItemGroup>
+    <Content Update="..\$(PlatformTarget)\$(Configuration)\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  
 </Project>
