--- a/Himeno_Flex/Himeno_Flex.csproj
+++ b/Himeno_Flex/Himeno_Flex.csproj
@@ -28,7 +28,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.18362.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.18362.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-		<Authors>$(AssemblyName), Lemon Electric Computer</Authors>
+		<Authors>Lemon Electric Computer, $(AssemblyName) Project</Authors>
 		<Copyright>LGPL v2.0 or later</Copyright>
 		<Description>GUI Application for Bench Mark</Description>
 		<PackageIcon>Icon.png</PackageIcon>
